# MyHomePage

./: 404.html  Cargo.toml  Dioxus.toml  README.md  build.ps1  fix_paths.ps1  index.html  zola.toml
.github/workflows/: deploy.yml  rust.yml
.zed/: tasks.json
content/: _index.md  projects.toml
content/articles/: _index.md
content/articles/2025/: 3ds_part1.md
css/: general.css  main.css  notfound.css  top_page.css
public/: index.html
src/: main.rs  static_site_generation.rs  view.rs
src/view/: projects.rs
static/css/: article.css  general.css  top_page.css
static/js/: article_search.js
templates/: article.html  articles.html  base.html  index.html  macros.html  projects.html
